--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tailwindcss -i tailwind.css -o style.css"
+    "watch": "tailwindcss -i tailwind.css -o style.css -w"
   },
   "author": "",
   "license": "ISC",
